# free-run

./: .gitignore  auth_testing.md  backend_test.py  design_guidelines.json
.emergent/: emergent.yml
backend/: .env  pyproject.toml  server.py
backend/app/: main.py
backend/app/api/routers/: auth.py  profile.py  records.py  routes.py  runs.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: database.py
backend/app/models/: schemas.py
docs/plans/: 2026-04-06-routes-gallery-design.md  2026-04-06-routes-gallery.md  2026-04-08-project-overhaul-design.md  2026-04-08-project-overhaul-plan.md  task.md
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AuthCallback.jsx  Dashboard.jsx  LiveTracking.jsx  Login.jsx  Profile.jsx  Register.jsx  RoutePlanner.jsx  RunDetail.jsx
memory/: PRD.md  deploiement-o2switch.md  test_credentials.md
test_reports/: iteration_1.json  iteration_2.json
